@@ -1,5 +1,11 @@
 2017-03-07  Edward Jones  <ed.jones@embecosm.com>
 
+	* scripts/combined-elimination.py: Do multiple flag tests
+	during combined elimination in parallel, using a process
+	pool.
+
+2017-03-07  Edward Jones  <ed.jones@embecosm.com>
+
 	* lib/Database.cpp: Set timeout for access to the database
 	to around 3 hours.
 
